--- a/config.env
+++ b/config.env
@@ -2,5 +2,11 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://Liv:<PASSWORD>@cluster0.unudx.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=mTE2DDFz7YySbQBP
+
 JWT_SECRET=liv-jwt-secret-for-node-program-natours
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=86e458cc067520
+EMAIL_PASSWORD=4575cd3ad1a6e3
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
