--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "validator": "^13.1.1"
   },
   "devDependencies": {
