--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_PASSWORD=mTE2DDFz7YySbQBP
 
 JWT_SECRET=liv-jwt-secret-for-node-program-natours
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES=90
 
 EMAIL_USERNAME=86e458cc067520
 EMAIL_PASSWORD=4575cd3ad1a6e3
